# CryptoPortfolioAnalyzer

./: .env.example  .flake8  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  LICENSE_HEADER.txt  README.md  config_test_basic_csv.csv  config_test_compact_csv.csv  config_test_detailed_json.json  crypto_data.db  dataexporter_test.csv  dataexporter_test.json  demo_feature8_simple.py  demo_feature8_usage.py  demo_portfolio.csv  demo_portfolio.json  fixed_test.csv  fixed_test.json  large_test.json  main_export.csv  main_export.json  manual_test.csv  manual_test.json  portfolio_data.csv  pyproject.toml  requirements.txt  run_feature8.py  test_enterprise_export.py  test_export.csv  test_export.json  test_export_fixed.py  test_export_simple.py  test_feature8_risk_management.py  test_feature9_cicd_observability.py  test_portfolio_export.csv  test_realtime_monitoring.py  test_realtime_simple.py  test_visualization_demo.py  test_visualization_simple.py  (+3 more)
.github/workflows/: ci.yml
crypto_portfolio_analyzer/: __init__.py  cli.py
crypto_portfolio_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
crypto_portfolio_analyzer/analytics/: __init__.py  allocation.py  benchmarks.py  models.py  monitoring.py  portfolio.py  reports.py  risk.py
crypto_portfolio_analyzer/commands/: __init__.py  analytics.py  config.py  data.py  portfolio.py  stream.py  visualize.py
crypto_portfolio_analyzer/config/: .secret_key  default.yaml  secrets.enc
crypto_portfolio_analyzer/core/: __init__.py  cli_base.py  click_types.py  config.py  context.py  events.py  logging.py  plugin_manager.py
crypto_portfolio_analyzer/data/: __init__.py  api_client.py  cache.py  database.py  models.py  service.py
crypto_portfolio_analyzer/data/clients/: __init__.py  coingecko.py
crypto_portfolio_analyzer/observability/: __init__.py  alerts.py  logging.py  metrics.py  monitoring.py  tracing.py
crypto_portfolio_analyzer/plugins/: __init__.py  config.py  portfolio.py
crypto_portfolio_analyzer/risk/: __init__.py  assessment.py  compliance.py  manager.py
crypto_portfolio_analyzer/schemas/: cryptocurrency_symbols.json
crypto_portfolio_analyzer/streaming/: __init__.py  alerts.py  events.py  manager.py  monitoring_service.py  performance_monitor.py  portfolio_monitor.py  price_feeds.py  realtime_tracker.py  websocket_server.py
crypto_portfolio_analyzer/visualization/: __init__.py  charts.py  dashboard.py  export.py  exports.py  indicators.py  reports.py  terminal_charts.py
docs/api/: streaming.md
docs/features/: streaming.md
docs/testing/: feature5_testing_guide.md
examples/streaming/: basic_monitoring.py  portfolio_tracking.py  websocket_client.py
plugins/: test_plugin.py
scripts/: check_large_files.py
test_exports/subdirectory/: directory_test.csv
test_gallery/: index.html
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_analytics_models.py  test_api_client.py  test_cache.py  test_cli.py  test_coingecko_client.py  test_config.py  test_data_models.py  test_database.py  test_events.py  test_plugin_manager.py  test_portfolio_analyzer.py  test_realtime_monitoring.py  test_streaming_events.py  test_streaming_manager.py  test_streaming_price_feeds.py  test_streaming_websocket.py  test_technical_indicators.py  test_visualization_charts.py  test_visualization_dashboard.py  test_visualization_export.py  test_visualization_reports.py
